<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Item name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords" />

                <!-- Description field -->
                <EditText
                    android:id="@+id/edit_item_desc"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_desc"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <!-- price category -->
        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="number"
                    android:paddingLeft="20dp" />

                <!-- Units for price ($) -->
                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_price" />
            </RelativeLayout>
        </LinearLayout>


        <!-- quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/price_decrement"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="-" />

                <EditText
                    android:id="@+id/edit_item_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    tools:text="0" />

                <Button
                    android:id="@+id/price_increment"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"></ImageView>

            <Button
                android:id="@+id/buttonLoadImage"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/load_image"></Button>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@xml/button_colors"
        android:text="@string/order_button"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>
